# microtask_manager

./: README.md
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: apiClient.ts  sseClient.ts
frontend/src/components/: Navbar.tsx  TodoInput.tsx  TodoItem.tsx  TodoList.tsx  UserProfile.tsx
frontend/src/components/auth/: AuthGuard.tsx  LoginForm.tsx  RegisterForm.tsx
frontend/src/store/: useAuthStore.ts  useTodoStore.ts
frontend/src/types/: index.ts
infra/: docker-compose.yml  nginx.conf
notifications-service/: Dockerfile  pyproject.toml
notifications-service/src/notifications_service/: .env.example  faststream_app.py  pytest.ini
notifications-service/src/notifications_service/configs/: settings.py
notifications-service/src/notifications_service/data/: tasks_schemas.py
notifications-service/src/notifications_service/p_database/: db.py
notifications-service/src/notifications_service/services/: brokers.py  user_tasks_services.py
notifications-service/src/notifications_service/tests/: conftest.py  constants.py
notifications-service/src/notifications_service/tests/services/: conftest.py  test_user_tasks.py
notifications-service/src/notifications_service/tests/web/: test_paths.py
notifications-service/src/notifications_service/web/: rabbit_receivers.py
tasks-service/: .dockerignore  Dockerfile  pyproject.toml
tasks-service/src/tasks_service/: .env.example  faststream_app.py  main.py  s.py
tasks-service/src/tasks_service/alembic/: env.py
tasks-service/src/tasks_service/alembic/versions/: 84c7f9b149ec_create_tasks_table.py  8e7db46d8e92_add_description_to_tasks_table.py
tasks-service/src/tasks_service/configs/: settings.py
tasks-service/src/tasks_service/data/: tasks.py  tasks_schemas.py  users_schemas.py
tasks-service/src/tasks_service/services/: rabbit_service.py  sse_managers.py  stmts.py  tasks.py  users.py
tasks-service/src/tasks_service/tests/: conftest.py  constants.py
tasks-service/src/tasks_service/tests/services/: conftest.py  test_rabbit_service.py  test_sse_managers.py  test_tasks.py  test_users.py
tasks-service/src/tasks_service/tests/web/: test_paths.py  test_returning.py
tasks-service/src/tasks_service/web/: rabbit_receivers.py  sse.py  tasks.py
users-service/: .dockerignore  Dockerfile  pyproject.toml
users-service/src/users_service/: .env.example  faststream_app.py  main.py
users-service/src/users_service/alembic/: env.py
users-service/src/users_service/alembic/versions/: 4f11660ad1c4_create_user_table.py
users-service/src/users_service/configs/: auth.py  settings.py
users-service/src/users_service/data/: users.py  users_schemas.py
users-service/src/users_service/services/: sse_managers.py  users.py
users-service/src/users_service/tests/: conftest.py  constants.py
users-service/src/users_service/tests/services/: test_sse_manager.py  test_user_manager.py
users-service/src/users_service/tests/web/: test_paths.py
users-service/src/users_service/web/: rabbit_receivers.py  sse.py  sse_managers.py  users.py
