[project]
name = "notifications-service"
version = "0.1.0"
description = ""
authors = [
    {name = "novoselovsv",email = "novoselovsv@bk.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standart] (>=0.121.1,<0.122.0)",
    "faststream (>=0.6.3,<0.7.0)"
]

[tool.poetry]
packages = [{include = "notifications_service", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
