[project]
name = "notifications-service"
version = "0.1.0"
description = ""
authors = [
    {name = "novoselovsv",email = "novoselovsv@bk.ru"}
]
readme = "README.md"
requires-python = "<4.0,>=3.11"
dependencies = [
    "faststream[cli,rabbit] (>=0.6.3,<0.7.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "apscheduler (>=3.11.1,<4.0.0)",
    "pydantic (>=2.12.4,<3.0.0)"
]

[tool.poetry]
packages = [{include = "notifications_service", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
